# adbc_scanner

./: CMakeLists.txt
src/: adbc_insert.cpp  adbc_scan.cpp
src/include/storage/: adbc_catalog.hpp  adbc_insert.hpp
src/storage/: adbc_catalog.cpp  adbc_insert.cpp
test/sql/: adbc_scan.test
